# gglib

./: .gitignore  README.md  database.py  environment.yml  main.py  pyproject.toml  repositories.py
api/: main.py
gglib-web/: package-lock.json  package.json
gglib-web/src/app/: page.tsx
gglib-web/src/components/: ModelCard.tsx
gglib-web/src/services/: api.ts
gglib-web/src/types/: api.ts
models/: __init__.py  gguf.py
services/: __init__.py  process_service.py
tests/: __init__.py  test_database_get_model_by_id.py  test_database_list.py
