[project]
name = "gglib"
version = "0.1.0"
description = "GGUF model manager and runner"

[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    "*/venv/*",
    ".venv/*",
    "*/.venv/*",
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "main.py",
    "models/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]